--- a/TwistedFizzBuzzTests/TwistedFizzBuzzTests.csproj
+++ b/TwistedFizzBuzzTests/TwistedFizzBuzzTests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+    <ProjectReference Include="..\TwistedFizzBuzz\TwistedFizzBuzz.csproj" />
   </ItemGroup>
 
 </Project>
